Update OG Suite build system